docs: add command line run to examples/README.md